<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center" android:id="@+id/inviter_attribution" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_touchable_padding" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <com.clubhouse.android.shared.ui.AvatarView android:id="@+id/inviter_avatar" android:layout_width="@dimen/avatar_size_profile_extra_small" android:layout_height="@dimen/avatar_size_profile_extra_small" android:contentDescription="@string/inviter_avatar"/>
        <TextView android:id="@+id/inviter_name_with_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/join" android:layout_marginStart="@dimen/common_touchable_padding" style="@style/TextStyle.Medium"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:id="@+id/club_action_button_container" android:paddingTop="@dimen/common_touchable_padding" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/inviter_attribution" app:layout_goneMarginTop="8dp">
        <Button android:textSize="14sp" android:id="@+id/schedule_room_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_marginLeft="@dimen/club_buttons_horizontal_margin" android:layout_marginRight="@dimen/club_buttons_horizontal_margin" android:text="@string/schedule_a_room" android:layout_marginHorizontal="@dimen/club_buttons_horizontal_margin" style="@style/Clubhouse.Button.Rounded.Medium.Blue"/>
        <Button android:textSize="14sp" android:id="@+id/member" android:visibility="gone" android:layout_width="wrap_content" android:layout_marginLeft="@dimen/club_buttons_horizontal_margin" android:layout_marginRight="@dimen/club_buttons_horizontal_margin" android:text="@string/member" android:layout_marginHorizontal="@dimen/club_buttons_horizontal_margin" style="@style/Clubhouse.Button.Rounded.Medium.Blue"/>
        <Button android:textSize="14sp" android:id="@+id/join_button" android:visibility="gone" android:layout_width="@dimen/follow_button_width" android:layout_marginLeft="@dimen/club_buttons_horizontal_margin" android:layout_marginRight="@dimen/club_buttons_horizontal_margin" android:text="@string/join" android:layout_marginHorizontal="@dimen/club_buttons_horizontal_margin" style="@style/Clubhouse.Button.Rounded.Medium.Blue"/>
        <Button android:textSize="14sp" android:id="@+id/join_the_club" android:visibility="gone" android:layout_width="wrap_content" android:layout_marginLeft="@dimen/club_buttons_horizontal_margin" android:layout_marginRight="@dimen/club_buttons_horizontal_margin" android:text="@string/join_the_club" android:layout_marginHorizontal="@dimen/club_buttons_horizontal_margin" style="@style/Clubhouse.Button.Rounded.Medium.Blue"/>
        <Button android:textSize="14sp" android:id="@+id/apply_to_join" android:visibility="gone" android:layout_width="wrap_content" android:layout_marginLeft="@dimen/club_buttons_horizontal_margin" android:layout_marginRight="@dimen/club_buttons_horizontal_margin" android:text="@string/apply_to_join" android:layout_marginHorizontal="@dimen/club_buttons_horizontal_margin" style="@style/Clubhouse.Button.Rounded.Medium.Blue"/>
        <Button android:textSize="14sp" android:id="@+id/add_members" android:visibility="gone" android:layout_marginLeft="@dimen/club_buttons_horizontal_margin" android:layout_marginRight="@dimen/club_buttons_horizontal_margin" android:text="@string/add_members" android:layout_marginHorizontal="@dimen/club_buttons_horizontal_margin" style="@style/Clubhouse.Button.Rounded.Medium.White"/>
        <Button android:textSize="14sp" android:id="@+id/nominate_members" android:visibility="gone" android:layout_width="wrap_content" android:layout_marginLeft="@dimen/club_buttons_horizontal_margin" android:layout_marginRight="@dimen/club_buttons_horizontal_margin" android:text="@string/nominate_members" android:layout_marginHorizontal="@dimen/club_buttons_horizontal_margin" style="@style/Clubhouse.Button.Rounded.Medium.White"/>
        <Button android:textSize="14sp" android:id="@+id/invite_members" android:visibility="gone" android:layout_marginLeft="@dimen/club_buttons_horizontal_margin" android:layout_marginRight="@dimen/club_buttons_horizontal_margin" android:text="@string/invite_members" android:layout_marginHorizontal="@dimen/club_buttons_horizontal_margin" style="@style/Clubhouse.Button.Rounded.Medium.White"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
