<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="?android:attr/windowBackground" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" style="@style/ClubhouseNavToolbar">
        <ImageView android:id="@+id/back" style="@style/ClubhouseNavBackIcon"/>
        <TextView android:id="@+id/toolbar_title" android:text="@string/account" style="@style/ClubhouseNavTitle"/>
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout android:id="@+id/loading" android:layout_width="match_parent" android:layout_height="match_parent">
        <ProgressBar android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </FrameLayout>
    <androidx.cardview.widget.CardView android:layout_marginTop="@dimen/common_row_horizontal_padding" android:layout_marginBottom="@dimen/common_bottom_margin" style="@style/Clubhouse.CardView">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/twitter" android:text="@string/connect_twitter" android:textAlignment="center" style="@style/Clubhouse.Settings.Item"/>
            <View style="@style/Divider"/>
            <TextView android:id="@+id/instagram" android:text="@string/connect_instagram" android:textAlignment="center" style="@style/Clubhouse.Settings.Item"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView style="@style/Clubhouse.CardView">
        <TextView android:textColor="@color/clubhouse_red" android:id="@+id/deactivate" android:text="@string/deactivate_account" android:textAlignment="center" style="@style/Clubhouse.Settings.Item"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>
