<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:gravity="center" android:id="@+id/title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="@dimen/common_large_margin" android:layout_marginRight="30dp" android:layout_marginBottom="@dimen/common_large_margin" android:text="@string/connect_social_accounts" android:layout_marginHorizontal="30dp" android:layout_marginVertical="@dimen/common_large_margin" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/TextStyle.Medium.Heading"/>
    <Button android:id="@+id/twitter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="250dp" android:text="@string/add_twitter" app:icon="@drawable/ic_twitter_white" app:iconPadding="@dimen/common_drawable_padding" app:layout_constraintBottom_toTopOf="@+id/instagram" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintVertical_chainStyle="2" style="@style/Clubhouse.Button.Rounded.PrimaryAction.White"/>
    <Button android:id="@+id/instagram" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:minWidth="250dp" android:text="@string/add_instagram" app:icon="@drawable/ic_instagram" app:iconPadding="@dimen/common_drawable_padding" app:layout_constraintBottom_toTopOf="@+id/label" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/twitter" style="@style/Clubhouse.Button.Rounded.PrimaryAction.White"/>
    <TextView android:id="@+id/label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/connect_social_accounts_permission" app:layout_constraintBottom_toTopOf="@+id/next_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/instagram" style="@style/TextStyle.Light.OnboardingNotice"/>
    <Button android:id="@+id/next_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/common_action_button_bottom_margin" android:text="@string/do_this_later" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/Clubhouse.Button.Next"/>
    <FrameLayout android:id="@+id/loading" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <ProgressBar android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
